[TEST] patch methods working on curl but not in the swagger
